implemented login & signup flow with initial error handling; set up UserMeasurement and User models

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -72,6 +72,7 @@
         android:layout_below="@id/etUsernameSignup"
         android:layout_marginTop="10dp"
         android:hint="Password"
+        android:inputType="textPassword"
         android:textAlignment="viewStart" />
 
     <TextView
@@ -84,52 +85,70 @@
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textStyle="bold" />
 
-    <TextView
+    <EditText
         android:id="@+id/etHeightSignup"
         android:layout_width="100dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvSizingInfo"
-        android:hint="@string/height"
         android:layout_marginTop="10dp"
+        android:hint="@string/height"
+        android:numeric="decimal"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textStyle="bold" />
 
-    <TextView
+    <EditText
         android:id="@+id/etChestSignup"
         android:layout_width="100dp"
-        android:layout_marginStart="5dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvSizingInfo"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@id/etHeightSignup"
         android:hint="@string/chest"
-        android:layout_marginTop="10dp"
+        android:numeric="decimal"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textStyle="bold" />
 
-    <TextView
+    <EditText
         android:id="@+id/etWaistSignup"
         android:layout_width="100dp"
-        android:layout_marginStart="5dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvSizingInfo"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@id/etChestSignup"
         android:hint="@string/waist"
-        android:layout_marginTop="10dp"
+        android:numeric="decimal"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textStyle="bold" />
 
 
-    <TextView
+    <EditText
         android:id="@+id/etHipSignup"
         android:layout_width="100dp"
-        android:layout_marginStart="5dp"
         android:layout_height="wrap_content"
         android:layout_below="@id/tvSizingInfo"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
         android:layout_toEndOf="@id/etWaistSignup"
         android:hint="@string/hip_inches"
-        android:layout_marginTop="10dp"
+        android:numeric="decimal"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
         android:textStyle="bold" />
+
+    <EditText
+        android:id="@+id/etWeightSignup"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/etHeightSignup"
+        android:layout_marginStart="5dp"
+        android:layout_marginTop="10dp"
+        android:hint="@string/weight_lb"
+        android:numeric="decimal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+        android:textStyle="bold" />
+
+
 
     <Button
         android:id="@+id/btnSignUp"
@@ -137,7 +156,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1"
         android:layout_marginTop="35dp"
-        android:layout_below="@id/etHeightSignup"
+        android:layout_below="@id/etWeightSignup"
         android:backgroundTint="#4CAF50"
         android:text="sign up" />
 
