added bottom nav menu and empty fragments

--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     android:layout_margin="16dp"
     android:layout_centerInParent="true"
-    tools:context=".SignupActivity">
+    tools:context=".activities.SignupActivity">
 
 
     <TextView
