App theme and style changes.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,11 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="light_yellow">#F6F4D2</color>
+    <color name="yellow_green">#D4E098</color>
+    <color name="tea_green">#CBDFBD</color>
+    <color name="dark_salmon">#F19C79</color>
+    <color name="medium_carmine">#A44A3F</color>
+
 </resources>
